<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@color/main_background">

    <ImageView
        android:onClick="ToMenu"
        android:id="@+id/imageView2"
        android:layout_width="20dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064"
        app:srcCompat="@drawable/hamburger" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="49dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        app:srcCompat="@drawable/sound" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        app:srcCompat="@drawable/logo_unenabled" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        app:srcCompat="@drawable/user" />

    <TextView
        android:onClick="ToLogin"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:layout_marginRight="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/avatar"

        android:src="@drawable/avatar_gg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/perexod2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@drawable/weather_2_riga"
        android:onClick="riga"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.084" />


    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/perexod4"
        android:layout_width="150dp"
        android:layout_height="100dp"

        android:background="@drawable/weather_4_budapesht"
        android:onClick="budapesht"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perexod2"
        app:layout_constraintVertical_bias="0.056" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/perexod1"
        android:layout_width="150dp"
        android:layout_height="100dp"
    android:onClick="kishinev"

        android:background="@drawable/weather_1_kishinev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.084" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/perexod3"
        android:layout_width="150dp"
        android:layout_height="100dp"

        android:background="@drawable/weather_3_las_palmas"
        android:onClick="las_palmas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perexod1"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:gravity="center"
        android:text="@string/user"
        android:textColor="@color/white"
        android:textSize="35sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/weather_1_value"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="@+id/perexod2"
        app:layout_constraintEnd_toEndOf="@+id/perexod2"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="@+id/perexod2"
        app:layout_constraintTop_toTopOf="@+id/perexod2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/weather_1_value"
        android:textColor="@color/white"


        app:layout_constraintBottom_toBottomOf="@+id/perexod1"
        app:layout_constraintEnd_toEndOf="@+id/perexod1"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="@+id/perexod1"
        app:layout_constraintTop_toTopOf="@+id/perexod1"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/weather_1_value"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="@+id/perexod3"
        app:layout_constraintEnd_toEndOf="@+id/perexod3"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="@+id/perexod3"
        app:layout_constraintTop_toTopOf="@+id/perexod3"
        app:layout_constraintVertical_bias="1.0" />


    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/imageButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@drawable/button_signin"
        android:onClick="ToMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perexod3"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/add_button"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/weather_1_value"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="@+id/perexod4"
        app:layout_constraintEnd_toEndOf="@+id/perexod4"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="@+id/perexod4"
        app:layout_constraintTop_toTopOf="@+id/perexod4"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>